test/should-fail/vsgc1891.f3
/**
 * Should-fail test VSGC-1891 : public-init access modifier should not be applied to def variable
 *
 * @test/compile-error
 */

public-init def max=100;

class Foo {

   public-init def min=1;

}
